@@ -1,4 +1,4 @@
-/* $Id: fm.h,v 1.138 2007/05/30 04:47:24 inu Exp $ */
+/* $Id: fm.h,v 1.139 2010/07/19 09:00:34 htrb Exp $ */
 /* 
  * w3m: WWW wo Miru utility
  * 
@@ -1038,6 +1038,7 @@ global char ExtHalfdump init(FALSE);
 global char FollowLocale init(TRUE);
 global char UseContentCharset init(TRUE);
 global char SearchConv init(TRUE);
+global char SimplePreserveSpace init(FALSE);
 #define Str_conv_from_system(x) wc_Str_conv((x), SystemCharset, InnerCharset)
 #define Str_conv_to_system(x) wc_Str_conv_strict((x), InnerCharset, SystemCharset)
 #define Str_conv_to_halfdump(x) (ExtHalfdump ? wc_Str_conv((x), InnerCharset, DisplayCharset) : (x))
